Bug 1040290 - remedying the visibility conflict between the value selector and the system dialog that triggers it.

--- a/apps/system/style/value_selector/value_selector.css
+++ b/apps/system/style/value_selector/value_selector.css
@@ -6,6 +6,12 @@
   left: 0;
   position: absolute;
   transition: visibility 0.5s, opacity 0.5s;
+  display: block;
+}
+
+.value-selector[hidden] {
+  visibility: hidden;
+  opacity: 0;
 }
 
 .value-selector-container li > label {
